Fix spacing for desktop processing queue

--- a/src/app/components/header/processing-queue/processing-queue.component.scss
+++ b/src/app/components/header/processing-queue/processing-queue.component.scss
@@ -21,7 +21,8 @@
 
 .jobs-display--desktop {
   height: 510px;
-  overflow: auto;
+  display: flex;
+  flex-direction: row;
 }
 
 .jobs-display--mobile {
